Bug 258541 - Tellico sets the track artist to Various for FreeDB results
Summary: Tellico sets the track artist to Various for FreeDB results
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-02 07:32 UTC by Robby Stephenson
Modified: 2010-12-02 07:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2010-12-02 07:32:45 UTC
Version:           2.3.1
OS:                Linux

For a FreeDB result with different artists for each track, every track is set to the album artist instead of the track artist.

Reported at http://forum.kde.org/viewtopic.php?f=200&t=91682&p=179995#p179995

Reproducible: Didn't try
Comment 1 Robby Stephenson 2010-12-02 07:37:26 UTC
SVN commit 1202748 by rstephenson:

Make sure to use the track artists, if available, for the freedb results.

BUG:258541


 M  +1 -0      ChangeLog  
 M  +4 -2      src/translators/freedbimporter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202748