Make sure to use the track artists, if available, for the freedb results.

BUG:258541

svn path=/trunk/extragear/office/tellico/; revision=1202748